# dionysos

./: .gitignore  Cargo.toml  README.md  test.out
.github/workflows/: cargo_publish.yml  coverage.yml  debian_package.yml  release.yml  rust-clippy.yml
consumer-derive/: Cargo.toml
consumer-derive/src/: lib.rs
dionysos-derives/: Cargo.toml
dionysos-derives/src/: lib.rs
dionysos-synhelper/: Cargo.toml
dionysos-synhelper/src/: lib.rs
provider-derive/: Cargo.toml
provider-derive/src/: lib.rs
src/: cli.rs  consumer.rs  csv_line.rs  dionysos.rs  file_enumerator.rs  filename_scanner.rs  filescanner.rs  hash_scanner.rs  levenshtein_scanner.rs  lib.rs  macros.rs  main.rs  output_destination.rs  output_format.rs  output_methods.rs  scanner_result.rs  stdout_printer.rs  worker.rs  yara_scanner.rs
src/yara/: mod.rs  yara_error.rs  yara_externals.rs  yara_finding.rs  yara_scanner.rs  yara_string.rs
test/data/: large.txt  large.txt.bz2  large.txt.xz  sample1.txt.bz2  sample1.txt.xz
test/yara/: sample1.yar
tests/: test_filenames.rs  test_hashes.rs  test_yara.rs
tests/common/: mod.rs
tests/common/predicates/: mod.rs
tests/common/predicates/json/: mod.rs
tests/data/: Security.evtx  Windows PowerShell.evtx  sample2.txt  sample2.txt.bz2  sample2.txt.xz
tests/yara/: evtx.yar  reg.yar  sample1.yar
