[package]
name = "dionysos"
version = "0.10.0"
edition = "2018"
description = "Scanner for various IoCs"
homepage = "https://www.github.com/janstarke/dionysos"
repository = "https://www.github.com/janstarke/dionysos"
license = "GPL-3.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "forensics", "security"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["scan_evtx", "scan_reg"]
scan_evtx = ["evtx", "serde_json"]
scan_reg = ["nt_hive2", "binread"]

[dependencies]
anyhow = "1.0"
clap = {version="3", features=["derive"]}
clap-verbosity-flag = {version="1.0.0"}
simplelog = "0.12"
log = "0.4"
walkdir = "2"
yara = "0"
zip = "0.5"
regex = "1.5"
indicatif = "0.17.0-rc.11"
filemagic = "0"
duplicate = "0.4"
file-owner = "0.1"
spmc = "0.3"
num_cpus = "1.13"

flate2 = "1"
bzip2 = "0.4.3"
xz = "0.1"

hex = "0.4"

memmap = "0.7"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"

evtx = {version="0.7", optional=true, features=["multithreading"]}
serde_json = {version="1.0", optional=true}

nt_hive2 = {version=">=2.2.1", optional=true, features=[]}
binread = {version="2", optional=true}
