[package]
name = "dionysos"
version = "1.2.0"
edition = "2018"
description = "Scanner for various IoCs"
homepage = "https://www.github.com/janstarke/dionysos"
repository = "https://www.github.com/janstarke/dionysos"
license = "GPL-3.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "forensics", "security"]
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libdionysos"
path = "src/lib.rs"

[[bin]]
name = "dionysos"
path = "src/main.rs"

[features]
default = ["scan_evtx", "scan_reg"]
scan_evtx = ["evtx"]
scan_reg = ["nt_hive2", "binread"]

[package.metadata.deb]
license-file = "LICENSE"
depends = "libyara-dev (>=4.2.1), file, libclang-dev"

[dependencies]
anyhow = "1.0"
clap = {version="4", features=["derive", "wrap_help"]}
clap-verbosity-flag = {version="2.0.0"}
simplelog = "0.12"
log = "0.4"
walkdir = "2"
yara = "0.17"
zip = "0.6"
regex = "1.5"
indicatif = "0.17.0-rc.11"
filemagic = "0"
duplicate = "0.4"
file-owner = "0.1"
num_cpus = "1.13"
rayon = "1.6"
scoped-tls = "1.0"
maplit = "1"

flate2 = "1"
bzip2 = "0.4.3"
xz = "0.1"
serde = "1.0"
serde_json = "1.0"
csv = "1.1"

hex = "0.4"

memmap = "0.7"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"

evtx = {version="0.8", optional=true, features=["multithreading"]}

nt_hive2 = {version="3.0", optional=true, features=[]}
binread = {version="2", optional=true}

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates-core = "1"