[package]
name = "dionysos-consumer-derive"
version = "0.1.0"
edition = "2021"
license = "GPL-V3.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "derive crate for dionysos: Scanner for various IoCs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
