[package]
name = "dionysos-synhelper"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "helper crate for derive crate for dionysos: Scanner for various IoCs"
homepage = "https://www.github.com/janstarke/dionysos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
